force-app/main/default/objects/zkups__QueuedInternationalCommodity__c/zkups__QueuedInternationalCommodity__c.object-meta.xml
<CustomObject>
    <label>UPS Queued International Commodity</label>
    <nameField>
        <label>Queued International Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPS Queued International Commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>