force-app/main/default/objects/zkups__QueuedInternationalCommodity__c/fields/zkups__NumberOfPieces__c.field-meta.xml
<CustomField>
    <fullName>zkups__NumberOfPieces__c</fullName>
    <label>Number Of Packages Per Commodity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>