force-app/main/default/objects/zkups__QueuedInternationalCommodity__c/fields/zkups__PartNumber__c.field-meta.xml
<CustomField>
    <fullName>zkups__PartNumber__c</fullName>
    <label>Part Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>