force-app/main/default/objects/zkups__QueuedInternationalCommodity__c/fields/zkups__ProducerInfo__c.field-meta.xml
<CustomField>
    <fullName>zkups__ProducerInfo__c</fullName>
    <label>Producer Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The shipper is the producer of the good</fullName>
            </value>
            <value>
                <fullName>Knowledge of whether the good qualifies as an originating good</fullName>
            </value>
            <value>
                <fullName>Reliance on the producers written representation</fullName>
            </value>
            <value>
                <fullName>A signed Certificate provided to the exporter by the producer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>