force-app/main/default/objects/zkups__QueuedInternationalCommodity__c/fields/zkups__Queued_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkups__Queued_Shipment__c</fullName>
    <label>UPS Queued Shipment</label>
    <referenceTo>zkups__QueuedShipment__c</referenceTo>
    <relationshipLabel>UPS Queued International Commodities</relationshipLabel>
    <relationshipName>UPS_Queued_International_Commodities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>