force-app/main/default/objects/zkups__QueuedInternationalCommodity__c/fields/zkups__UnitOfMeasurementOther__c.field-meta.xml
<CustomField>
    <fullName>zkups__UnitOfMeasurementOther__c</fullName>
    <label>Other Unit Of Measurement</label>
    <length>3</length>
    <type>Text</type>
</CustomField>